--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,4 +1,11 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+"trailingComma": "es5",
+"tabWidth": 2,
+"semi": true,
+"singleQuote": false,
+"singleAttributePerLine": true,
+"arrowParens": "always",
+"printWidth": 80,
+"bracketSameLine": false
+
 }
