--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,11 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "firebase": "^9.9.3",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.11",
@@ -25,6 +25,8 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.7.1",
     "typescript": "4.7.4"
   }
 }
