--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
     "firebase": "^9.9.3",
+    "json-loader": "^0.5.7",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
